# shared-memory-buffer-between-tauri-and-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pnpm-lock.yaml
.changes/: add-bring-all-to-front-predefined-menu-item-type.md  android-timeout-crash.md  append-rc-content-support.md  change-pr-15175.md  changed.md  disable-autofill.md  dom-query-0.26.md  dom-query-0.27.md  fix-macos-background-color.md  fix-webkitgtk-background-color.md  general-autofill.md  infinite-loop-on-handler-error.md  ios-skip-codesign.md  keep-get-id.md  liquid-glass-icon.md  mac-dylib.md  macos-cookie-symbol-not-found.md  macos-set-draws-background-crash.md  multi-window-mobile.md  new-window-handler-no-send.md  on-new-intent.md  phf-0.13.md  remove-drag-drop-feature.md  remove_webviewattributes.md  replace-kuchikiki.md  sign-no-password.md  supersede-kuchikiki.md  tauri-sec-localhost-suffix.md  web-content-process-termination.md  windows-fileversion-build-metadata.md
.github/workflows/: lint-rust.yml  test-cli-rs.yml
crates/tauri-build/: CHANGELOG.md  Cargo.toml
crates/tauri-bundler/: CHANGELOG.md  Cargo.toml
crates/tauri-cli/: CHANGELOG.md  Cargo.toml  config.schema.json  metadata-v2.json
crates/tauri-codegen/: CHANGELOG.md  Cargo.toml
crates/tauri-macos-sign/: Cargo.toml  (+1 more)
crates/tauri-plugin-shared-buffer/: Cargo.toml  README.md  build.rs
crates/tauri-plugin-shared-buffer/permissions/: default.toml
crates/tauri-plugin-shared-buffer/permissions/autogenerated/: reference.md
crates/tauri-plugin-shared-buffer/permissions/autogenerated/commands/: close_shared_buffer.toml  close_shared_channel.toml  create_shared_buffer.toml  create_shared_channel.toml  dispatch_shared_channel.toml  read_shared_buffer.toml  write_shared_buffer.toml
crates/tauri-plugin-shared-buffer/permissions/schemas/: schema.json
crates/tauri-plugin-shared-buffer/src/: lib.rs  shared_ipc.rs
src/: inject_initialization_scripts.rs  lib.rs
tauri-duckdb-experiment/: README.md  index.html  package-lock.json  package.json
tauri-duckdb-experiment/src-tauri/: Cargo.toml  tauri.conf.json
tauri-duckdb-experiment/src-tauri/capabilities/: default.json
tauri-duckdb-experiment/src-tauri/src/: lib.rs  main.rs  native_duckdb.rs
(+47 files in other folders)
